--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -67,7 +67,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+		<dependency>
+                        <groupId>com.stripe</groupId>
+                        <artifactId>stripe-java</artifactId>
+                        <version>24.8.0</version>
+                 </dependency>
+
 
 	</dependencies>
 
