Added comments and polished functions

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,8 +2,7 @@ spring.application.name=backend
 spring.datasource.url=jdbc:mysql://localhost:3306/meditrackdb
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=@nandu18
+spring.datasource.password=Bablu@2005
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.servlet.session.timeout=5m
-
