Added email notifications and forgot password otps

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.password=Bablu@2005
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.servlet.session.timeout=5m
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=gowrisankarreddykalukurthi@gmail.com
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
