--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -71,7 +71,11 @@
                         <groupId>com.stripe</groupId>
                         <artifactId>stripe-java</artifactId>
                         <version>24.8.0</version>
-                 </dependency>
+        </dependency>
+        <dependency>
+					    <groupId>org.springframework.boot</groupId>
+					    <artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 
 	</dependencies>
