--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:mysql://localhost:3306/meditrackdb
+spring.datasource.url=${MYSQL_DB_URL}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Bablu@2005
+spring.datasource.username=${MYSQL_DB_USERNAME}
+spring.datasource.password=${MYSQL_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.servlet.session.timeout=5m
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=gowrisankarreddykalukurthi@gmail.com
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
+stripe.secret.key=${STRIPE_SECRET_KEY}
