--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
-spring.datasource.url=${MYSQL_DB_URL}
+spring.datasource.url=jdbc:mysql://uumuqpxtcnb8fhru:gDsII4xlKULFAeZI94pG@bi6ovott4oyk9znpiqzm-mysql.services.clever-cloud.com:3306/bi6ovott4oyk9znpiqzm
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${MYSQL_DB_USERNAME}
-spring.datasource.password=${MYSQL_DB_PASSWORD}
+spring.datasource.username=uumuqpxtcnb8fhru
+spring.datasource.password=gDsII4xlKULFAeZI94pG
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.servlet.session.timeout=5m
