--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${MYSQL_DB_USERNAME}
 spring.datasource.password=${MYSQL_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=trueAdd commentMore actions
+spring.jpa.show-sql=true 
 server.servlet.session.timeout=5m
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
