--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
-spring.datasource.url=${MYSQL_DB_URL}
+spring.datasource.url=jdbc:${MYSQL_URL}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${MYSQL_DB_USERNAME}
-spring.datasource.password=${MYSQL_DB_PASSWORD}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
 server.servlet.session.timeout=5m
