--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 stripe.secret.key=${STRIPE_SECRET_KEY}
+server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.secure=true
