--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -87,6 +87,11 @@
 			<artifactId>google-api-client</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
