--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,9 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.1",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
